--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/basics/build_lifecycle.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/basics/build_lifecycle.adoc
@@ -15,57 +15,71 @@
 [[build_lifecycle]]
 = Build Lifecycle
 
-As a build author, you define tasks and dependencies between tasks.
-Gradle guarantees that these tasks will execute in order of their dependencies.
-
-Your build scripts and plugins configure this dependency graph.
-
-For example, if your project tasks include `build`, `assemble`, `createDocs`, your build script(s) can ensure that they are executed in the order `build` -> `assemble` -> `createDoc`.
+* build author
+    ** define
+        *** tasks
+        *** dependencies between tasks /
+            **** tasks -- will be executed -- in order of their dependencies
+* build scripts & plugins
+    ** configure dependency graph
+        *** _Example:_ if project tasks include `build`, `assemble`, `createDocs` -> build script(s) ensure that they are executed -- in the order -- `build` -> `assemble` -> `createDoc`
 
 == Task Graphs
 
-Gradle builds the task graph *before* executing any task.
-
-Across all projects in the build, tasks form a http://en.wikipedia.org/wiki/Directed_acyclic_graph[Directed Acyclic Graph^] (DAG).
-
-This diagram shows two example task graphs, one abstract and the other concrete, with dependencies between tasks represented as arrows:
+* built by Gradle | *before* executing any task /
+    ** plugins & build scripts -- contribute to the -- task graph / -- via --
+        *** <<tutorial_using_tasks.adoc#sec:task_dependencies,task dependency mechanism>>
+        *** <<incremental_build.adoc#sec:task_inputs_outputs,annotated inputs/outputs>>
+* http://en.wikipedia.org/wiki/Directed_acyclic_graph[Directed Acyclic Graph^] (DAG) /
+    ** across all projects | build
+* _Example:_ 2 example task graphs /
+    ** 1 abstract & other concrete
+    ** dependencies between tasks -- are represented as -- arrows
 
 image::task-dag-examples.png[]
-
-[[build_lifecycle_events]]
-Both plugins and build scripts contribute to the task graph via the <<tutorial_using_tasks.adoc#sec:task_dependencies,task dependency mechanism>> and <<incremental_build.adoc#sec:task_inputs_outputs,annotated inputs/outputs>>.
 
 [[sec:build_phases]]
 == Build Phases
 
-A Gradle build has three distinct phases.
+* Gradle build
+    ** == 👀 3 phases 👀 / run in order
 
 image::author-gradle-1.png[]
 
-Gradle runs these phases in order:
-
 Phase 1. Initialization::
-- Detects the `settings.gradle(.kts)` file.
-- Creates a link:{groovyDslPath}/org.gradle.api.initialization.Settings.html[`Settings`] instance.
-- Evaluates the settings file to determine which projects (and included builds) make up the build.
-- Creates a link:{groovyDslPath}/org.gradle.api.Project.html[`Project`] instance for every project.
+* Detects the `settings.gradle(.kts)` file
+* Creates a link:{groovyDslPath}/org.gradle.api.initialization.Settings.html[`Settings`] instance
+* Evaluates the settings file -- to determine -- | the build,
+    ** projects & subprojects
+    ** included builds
+* Creates a link:{groovyDslPath}/org.gradle.api.Project.html[`Project`] instance / EVERY project
 Phase 2. Configuration::
-- Evaluates the build scripts, `build.gradle(.kts)`, of every project participating in the build.
-- Creates a task graph for requested tasks.
+* Evaluates the build scripts, `build.gradle(.kts)`, / EVERY project | build
+* Creates a task graph / requested tasks
 Phase 3. Execution::
-- Schedules and executes the selected tasks.
-- Dependencies between tasks determine execution order.
-- Execution of tasks can occur in parallel.
+* Schedules & executes the selected tasks /
+    ** dependencies between tasks -- determine -- execution order
+    ** execution of tasks -- can occur in -- parallel
 
 image::build-lifecycle-example.png[]
 
 === Example
 
-The following example shows which parts of settings and build files correspond to various build phases:
+* goal
+    ** parts of settings & build files / -- correspond to -- various build phases
 
 ====
-include::sample[dir="snippets/buildlifecycle/basic/kotlin",files="settings.gradle.kts[];build.gradle.kts[]"]
-include::sample[dir="snippets/buildlifecycle/basic/groovy",files="settings.gradle[];build.gradle[]"]
+// 1. Kotlin
+// 1.1 settings.gradle.kts
+include::../../../../snippets/buildlifecycle/basic/kotlin/settings.gradle.kts[]
+// 1.2 build.gradle.kts
+include::../../../../snippets/buildlifecycle/basic/kotlin/build.gradle.kts[]
+
+// 2. Groovy
+// 2.1 settings.gradle
+include::../../../../snippets/buildlifecycle/basic/groovy/settings.gradle[]
+// 2.2 build.gradle
+include::../../../../snippets/buildlifecycle/basic/groovy/build.gradle[]
 ====
 
 The following command executes the `test` and `testBoth` tasks specified above.
@@ -82,28 +96,6 @@ include::{snippetsPath}/buildlifecycle/basic/tests/buildlifecycle.out[]
 include::{snippetsPath}/buildlifecycle/basic/tests/buildlifecycle.out[]
 ----
 
-[[sec:initialization]]
-== Phase 1. Initialization
-
-In the *initialization phase*, Gradle detects the set of projects (root and subprojects) and included builds participating in the build.
-
-Gradle first evaluates the settings file, `settings.gradle(.kts)`, and instantiates a `Settings` object.
-Then, Gradle instantiates `Project` instances for each project.
-
-[[sec:configuration]]
-== Phase 2. Configuration
-
-In the *configuration phase*, Gradle adds tasks and other properties to the projects found by the initialization phase.
-
-[[sec:project_evaluation]]
-[[sec:execution]]
-== Phase 3. Execution
-
-In the *execution phase*, Gradle runs tasks.
-
-Gradle uses the task execution graphs generated by the configuration phase to determine which tasks to execute.
-
-[[sec:task_execution]]
 
 [.text-right]
 **Next Step:** <<writing_settings_files.adoc#writing_settings_files,Learn how to write Settings files>> >>
