--- a/platforms/documentation/docs/src/docs/userguide/dep-man/01-core-dependency-management/declaring_repositories.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/01-core-dependency-management/declaring_repositories.adoc
@@ -15,22 +15,33 @@
 [[declaring-repositories]]
 = Declaring repositories
 
-Gradle can resolve dependencies from one or many repositories based on Maven, Ivy or flat directory formats.
-Check out the <<#sec:repository-types,full reference on all types of repositories>> for more information.
+* repositories
+    ** allows
+        *** resolving dependencies
+* check <<#sec:repository-types,ALL allowed types of repositories>>
 
 [[sec:declaring_public_repository]]
 == Declaring a publicly-available repository
 
-Organizations building software may want to leverage public binary repositories to download and consume open source dependencies.
-Popular public repositories include <<#sub:maven_central,Maven Central>> and the <<#sub:maven_google,Google Android>> repository.
-Gradle provides built-in shorthand notations for these widely-used repositories.
+* public binary repositories
+    ** allows, about open source dependencies
+        *** download
+        *** consume
+* popular public repositories
+    ** <<#sub:maven_central,Maven Central>>
+        *** `mavenCentral()`
+            **** == built-in shorthand notations for it
+    ** <<#sub:maven_google,Google Android>>
+        *** `google()`
+            **** == built-in shorthand notations for it
 
 .Declaring a repository with the help of shorthand notations
 image::dependency-management-shortcut-repositories.png[]
 
-Under the covers Gradle resolves dependencies from the respective URL of the public repository defined by the shorthand notation.
-All shorthand notations are available via the link:{groovyDslPath}/org.gradle.api.artifacts.dsl.RepositoryHandler.html[RepositoryHandler] API.
-Alternatively, you can <<#sec:declaring_custom_repository,spell out the URL of the repository>> for more fine-grained control.
+* ways to declare
+    ** shorthand notations
+        *** -- available via the -- link:{groovyDslPath}/org.gradle.api.artifacts.dsl.RepositoryHandler.html[RepositoryHandler] API
+    ** <<#sec:declaring_custom_repository,spell out the URL of the repository>>
 
 [[sub:maven_central]]
 === Maven Central repository
@@ -61,6 +72,7 @@ include::sample[dir="snippets/artifacts/defineRepository/groovy",files="build.gr
 [[sec:declaring_custom_repository]]
 == Declaring a custom repository by URL
 
+* TODO:
 Most enterprise projects set up a binary repository available only within an intranet.
 In-house repositories enable teams to publish internal binaries, setup user management and security measure and ensure uptime and availability.
 Specifying a custom URL is also helpful if you want to declare a less popular, but publicly-available repository.
